2005-05-21 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/_strncpy.c: fixed not filling with \0

2005-05-26 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCast.c (funcOfType, funcOfTypeVarg, stringToSymbol,
	  createFunction),
	* src/SDCC.y (external_definition, enumerator, parameter_declaration,
	  compound_statement),
	* src/SDCCsymt.h,
	* src/SDCCsymt.c (addSymChain, processFuncArgs): fixed bug #1159134

2005-05-24 Raphael Neider <rneider AT web.de>

	* src/pic16/glue.c (pic16_printGPointerType): fixed #1207796

2005-05-24 Raphael Neider <rneider AT web.de>

	* device/include/pic16/pic18f{442,452,458}.h: fixed wrong
	  TRISE definitions, closes bug #1162453

2005-05-22 Raphael Neider <rneider AT web.de>

	* src/pic16/main.c (_process_pragma): check for missing
	  arguments to pragmas code and udata
	* device/include/pic16/pic18f{2550,4331,4455,4520}.h:
	  consistency fixes to match other headers (thanks to Jim Paris)
	* device/lib/pic16/libio/i2c.ignore: 18f4331 provides no I2C

2005-05-21 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCicode.c (isOperandEqual): fixed missing ;

2005-05-19 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/regression/tests/bug1198642.c: new test
	* src/SDCCicode.c (isOperandEqual): fixed bug 1198642
	* src/SDCCcse.c (findPrevIc): added comment, please have a look
	* support/scripts/resource.h,
	* support/scripts/resource.rc,
	* src/src.dsp: added sdcc.ico to project as icon for sdcc.exe
	* support/scripts/sdcc.ico: added 32x32 icon

2005-05-18 Raphael Neider <rneider AT web.de>

	* device/lib/pic16/libdev/pic18f*.c,
	* device/include/pic16/pic18f*.h: updated "sfr" and "at X"
	  keywords to "__sfr" and "__at (X)"
	* device/include/pic16/pic18fregs.h: added pic18f4520
	* src/pic16/pcode.c (pic16_pCode2str): fixed (?) bug
	  #1203088 (MPLAB compatibility)

2005-05-17 Raphael Neider <rneider AT web.de>

	* device/include/pic16/pic18f{2550,4331,4455,4520}.h: NEW