@@ -1,3 +1,10 @@
+2005-05-26 Raphael Neider <rneider AT web.de>
+
+	* src/pic16/glue.c (pic16_printIvalChar): fixed string
+	  initializers with \0, bug #1208187
+	* src/pic16/main.c (_process_pragma): added sanity checks
+	  for stack position and size, emit warnings when appropriate
+
 2005-05-21 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* device/lib/_strncpy.c: fixed not filling with \0
